# src/swagger.yaml
@@ -219,7 +219,7 @@ paths:
         '500':
           description: Internal server error
 
-  /users/updateUser:
+  /users/updateUser/{empId}:
     patch:
       summary: Update a user
       description: Update the details of an existing user. Requires admin authentication.
@@ -228,8 +228,9 @@ paths:
       security:
         - bearerAuth: []
       parameters:
-        - in: query
+        - in: path
           name: empId
+          required: true
           schema:
             type: string
             default: 1000
@@ -264,15 +265,12 @@ paths:
                       _id:
                         type: string
                         example: 60d0fe4f5311236168a109ca
-                      name:
+                      userName:
                         type: string
                         example: Jane Doe
                       email:
                         type: string
                         example: janedoe@example.com
-                      age:
-                        type: integer
-                        example: 30
         '400':
           description: Bad Request
         '401':
@@ -282,7 +280,7 @@ paths:
         '500':
           description: Internal server error
   
-  /users/deleteUser:
+  /users/deleteUser/{empId}:
     delete:
       summary: Delete a user
       description: Delete an existing user by their ID. Requires admin authentication.
@@ -291,8 +289,9 @@ paths:
       security:
         - bearerAuth: []
       parameters:
-        - in: query
+        - in: path
           name: empId
+          required: true
           schema:
             type: string
             default: 1000
@@ -314,6 +313,194 @@ paths:
           description: Unauthorized
         '404':
           description: User not found
+        '500':
+          description: Internal server error
+
+  /expenseTypes/createExpenseType:
+    post:
+      summary: Create Expense Type
+      description: Creates a new expense type. Requires admin JWT verification.
+      tags:
+        - ExpenseType
+      security:
+        - bearerAuth: []
+      requestBody:
+        description: Expense type object that needs to be added
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                category:
+                  type: string
+                  example: Gym
+                description:
+                  type: string
+                  example: category description
+                limit:
+                  type: number
+                  example: 1000
+              required:
+                - category
+                - description
+                - limit
+      responses:
+        '200':
+          description: Expense type created successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  _id:
+                    type: string
+                    example: 12345
+                  category:
+                    type: string
+                    example: Gym
+                  description:
+                    type: string
+                    example: category description
+                  limit:
+                    type: number
+                    example: 1000
+        '400':
+          description: Invalid input
+        '401':
+          description: Unauthorized
+
+  /expenseTypes/updateExpenseType/{category}:
+    patch:
+      summary: Update an Expense Type
+      description: Update the details of an existing expense type. Requires admin JWT verification.
+      tags:
+        - ExpenseType
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: category
+          required: true
+          schema:
+            type: string
+            example: Travel
+          description: Category of the expense type to update
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                description:
+                  type: string
+                  example: Expenses for travel purposes
+                limit:
+                  type: number
+                  example: 10000
+      responses:
+        '200':
+          description: Successfully updated the expense type
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Expense type updated successfully
+                  expenseType:
+                    type: object
+                    properties:
+                      _id:
+                        type: string
+                        example: 12345
+                      category:
+                        type: string
+                        example: Travel
+                      description:
+                        type: string
+                        example: Expenses for travel purposes
+                      limit:
+                        type: string
+                        example: 1000
+        '400':
+          description: Bad Request
+        '401':
+          description: Unauthorized
+        '404':
+          description: Expense type not found
+        '500':
+          description: Internal server error
+
+  /expenseTypes/deleteExpenseType/{category}:
+    delete:
+      summary: Delete an Expense Type
+      description: Delete an existing expense type. Requires admin JWT verification.
+      tags:
+        - ExpenseType
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: category
+          required: true
+          schema:
+            type: string
+            example: Travel
+          description: Category of the expense type to delete
+      responses:
+        '200':
+          description: Successfully deleted the expense type
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Expense type deleted successfully
+        '400':
+          description: Bad Request
+        '401':
+          description: Unauthorized
+        '404':
+          description: Expense type not found
+        '500':
+          description: Internal server error
+  
+  /expenseTypes/allExpenseTypes:
+    get:
+      summary: Get All Expense Types
+      description: Retrieve a list of all expense types. Requires admin JWT verification.
+      tags:
+        - ExpenseType
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Successfully retrieved all expense types
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: string
+                      example: 12345
+                    name:
+                      type: string
+                      example: Travel
+                    description:
+                      type: string
+                      example: Expenses for travel purposes
+        '400':
+          description: Bad Request
+        '401':
+          description: Unauthorized
         '500':
           description: Internal server error
 components:
